# pipFinal3

./: .python-version  create_python_project.sh
TEMPLATE/: check_parameters.sh  create_project_directory.sh  create_project_structure.sh  create_virtual_environment.sh  init.sh  initialize_git_repository.sh
myPipenv/: LICENSE  pyproject.toml
