[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "provaPip_3.6.4"
version = "0.0.1"
authors = [
  { name="Serratore Federico", email="19169@studenti.marconiverona.edu.it" }
]
description = ""
readme = "README.md"
requires-python = ">=3.6.4"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/SerratoreFe/provaPip_3.6.4"
"Bug Tracker" = "https://github.com/SerratoreFe/provaPip_3.6.4/issues"
